--- a/accenture.html
+++ b/accenture.html
@@ -19,7 +19,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="navbar-brand">
-                        <a href="index.html"><img src="img/logo.png"><h1>Geng Hao T.</h1></a>
+                        <a href="index.html"><img class="img-fluid" src="img/logo.png"><h1>Geng Hao T.</h1></a>
                     </div>
 
                     <div class="collapse navbar-collapse" id="navbarNav">
@@ -51,7 +51,7 @@
             <div class="container-fluid accenture-summary">
                 <div class="row">
                     <div class="col-12 wow fadeIn">
-                        <img src="img/accenture-hero.jpg">
+                        <img class="img-fluid" src="img/accenture-hero.jpg">
                     </div>
                 </div>
 
@@ -63,7 +63,7 @@
                  </div>
              </div>
 
-             <div class="row greybg wow fadeInUp">
+             <div class="row greybg wow fadeInUp project-info">
                 <div class="col-12 col-sm-4 text-center">
                     <h3>Period &amp; Timeframe</h3>
                     June 2017<br>3 days
@@ -121,10 +121,10 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-sm-6">
-                    <img src="img/accenture-wireframes-1.jpg">
+                    <img class="img-fluid" src="img/accenture-wireframes-1.jpg">
                 </div>
                 <div class="col-12 col-sm-6">
-                    <img src="img/accenture-wireframes-2.jpg">
+                    <img class="img-fluid" src="img/accenture-wireframes-2.jpg">
                 </div>
             </div>
 
@@ -142,7 +142,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-md-8 mx-auto">
-                    <img src="img/accenture-my-expenses.jpg">
+                    <img class="img-fluid" src="img/accenture-my-expenses.jpg">
                 </div>
             </div>
 
@@ -160,7 +160,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-md-8 mx-auto">
-                    <img src="img/accenture-my-goals.jpg">
+                    <img class="img-fluid" src="img/accenture-my-goals.jpg">
                 </div>
             </div>
 
@@ -178,7 +178,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-md-8 mx-auto">
-                    <img src="img/accenture-my-devices.jpg">
+                    <img class="img-fluid" src="img/accenture-my-devices.jpg">
                 </div>
             </div>
 
@@ -196,7 +196,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-md-6 mx-auto">
-                    <img src="img/accenture-community.jpg">
+                    <img class="img-fluid" src="img/accenture-community.jpg">
                 </div>
             </div>
 
