--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="col-12 col-md-6 mx-auto item">
                         <a href="accenture.html">
                             <div class="preview">
-                                <img src="img/accenture-hero.jpg">
+                                <img src="img/accenture-hero.jpg" class="img-fluid">
                                 <div class="labels">
                                     <div class="label">UX Design</div>
                                     <div class="label">UI Design</div>
@@ -68,7 +68,7 @@
                     <div class="col-12 col-md-6 mx-auto item">
                         <a href="investingnote.html">
                             <div class="preview">
-                                <img src="img/investingnote.jpg">
+                                <img src="img/investingnote.jpg" class="img-fluid">
                                 <div class="labels">
                                     <div class="label">UI Design</div>
                                     <div class="label">UX Design</div>
@@ -84,7 +84,7 @@
                     <div class="col-12 col-md-6 mx-auto item">
                         <a href="oneservice.html">
                             <div class="preview">
-                                <img src="img/oneservice.jpg">
+                                <img src="img/oneservice.jpg" class="img-fluid">
                                 <div class="labels">
                                     <div class="label">UX Design</div>
                                     <div class="label">UI Design</div>
@@ -96,7 +96,7 @@
                     <div class="col-12 col-md-6 mx-auto item">
                         <a href="srina.html">
                             <div class="preview">
-                                <img src="img/srina.jpg">
+                                <img src="img/srina.jpg" class="img-fluid">
                                 <div class="labels">
                                     <div class="label">Branding &amp; Identity</div>
                                     <div class="label">Visual Design</div>
@@ -111,7 +111,7 @@
                     <div class="col-12 col-md-6 item">
                         <a href="projectshowcase.html">
                             <div class="preview">
-                                <img src="img/project-showcase.jpg">
+                                <img src="img/project-showcase.jpg" class="img-fluid">
                                 <div class="labels">
                                 </div>
                                 <div class="caption">Project Showcase</div>
