--- a/oneservice.html
+++ b/oneservice.html
@@ -20,7 +20,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="navbar-brand">
-                        <a href="index.html"><img src="img/logo.png"><h1>Geng Hao T.</h1></a>
+                        <a href="index.html"><img class="img-fluid" src="img/logo.png"><h1>Geng Hao T.</h1></a>
                     </div>
 
                     <div class="collapse navbar-collapse" id="navbarNav">
@@ -52,7 +52,7 @@
             <div class="container-fluid oneservice-summary">
                 <div class="row">
                     <div class="col-12 wow fadeIn">
-                        <img src="img/oneservice-hero.jpg">
+                        <img class="img-fluid" src="img/oneservice-hero.jpg">
                     </div>
                 </div>
 
@@ -64,7 +64,7 @@
                     </div>
                 </div>
 
-                <div class="row greybg wow fadeInUp">
+                <div class="row greybg wow fadeInUp project-info">
                     <div class="col-12 col-sm-4 text-center">
                         <h3>Period &amp; Timeframe</h3>
                         August &mdash; November 2016
@@ -94,10 +94,10 @@
 
                 <div class="row image-block wow fadeIn">
                     <div class="col-12 col-sm-6">
-                        <img src="img/oneservice-persona-1.jpg">
+                        <img class="img-fluid" src="img/oneservice-persona-1.jpg">
                     </div>
                     <div class="col-12 col-sm-6">
-                        <img src="img/oneservice-persona-2.jpg">
+                        <img class="img-fluid" src="img/oneservice-persona-2.jpg">
                     </div>
                 </div>
 
@@ -130,7 +130,7 @@
 
                 <div class="row image-block wow fadeIn">
                     <div class="col-12 col-sm-8 mx-auto">
-                        <img src="img/oneservice-sketches.jpeg">
+                        <img class="img-fluid" src="img/oneservice-sketches.jpeg">
                         <div class="caption">Conceptual sketches of our redesign</div>
                     </div>
                 </div>
@@ -149,11 +149,11 @@
 
                 <div class="row image-block wow fadeIn">
                     <div class="col-6 col-md-4 col-lg-3 mx-auto">
-                        <img src="img/oneservice-app-prototype-1.jpg">
+                        <img class="img-fluid" src="img/oneservice-app-prototype-1.jpg">
                         <div class="caption">Previous Home Page</div>
                     </div>
                     <div class="col-6 col-md-4 col-lg-3 mx-auto">
-                        <img src="img/oneservice-app-prototype-2.jpg">
+                        <img class="img-fluid" src="img/oneservice-app-prototype-2.jpg">
                         <div class="caption">Redesigned Home Page</div>
                     </div>
                 </div>
@@ -172,11 +172,11 @@
 
                 <div class="row image-block wow fadeIn">
                     <div class="col-6 col-md-4 col-lg-3 mx-auto">
-                        <img src="img/oneservice-app-prototype-3.jpg">
+                        <img class="img-fluid" src="img/oneservice-app-prototype-3.jpg">
                         <div class="caption">Previous 'Submit New Case' Page</div>
                     </div>
                     <div class="col-6 col-md-4 col-lg-3 mx-auto">
-                        <img src="img/oneservice-app-prototype-4.jpg">
+                        <img class="img-fluid" src="img/oneservice-app-prototype-4.jpg">
                         <div class="caption">Redesigned 'Submit New Case' Page</div>
                     </div>
                 </div>
@@ -189,13 +189,13 @@
 
                 <div class="row image-block wow fadeIn">
                     <div class="col-4 col-lg-3 mx-auto">
-                        <img src="img/oneservice-app-prototype-5.jpg">
+                        <img class="img-fluid" src="img/oneservice-app-prototype-5.jpg">
                     </div>
                     <div class="col-4 col-lg-3 mx-auto">
-                        <img src="img/oneservice-app-prototype-6.jpg">
+                        <img class="img-fluid" src="img/oneservice-app-prototype-6.jpg">
                     </div>
                     <div class="col-4 col-lg-3 mx-auto">
-                        <img src="img/oneservice-app-prototype-7.jpg">
+                        <img class="img-fluid" src="img/oneservice-app-prototype-7.jpg">
                     </div>
                 </div>
 
@@ -207,11 +207,11 @@
 
                 <div class="row image-block wow fadeIn">
                     <div class="col-6 col-md-4 col-lg-3 mx-auto">
-                        <img src="img/oneservice-app-prototype-8.jpg">
+                        <img class="img-fluid" src="img/oneservice-app-prototype-8.jpg">
                         <div class="caption">Previous 'Case Submitted' Page</div>
                     </div>
                     <div class="col-6 col-md-4 col-lg-3 mx-auto">
-                        <img src="img/oneservice-app-prototype-9.jpg">
+                        <img class="img-fluid" src="img/oneservice-app-prototype-9.jpg">
                         <div class="caption">New 'Confirm Submission' Page</div>
                     </div>
                 </div>
@@ -224,10 +224,10 @@
 
                 <div class="row image-block wow fadeIn">
                     <div class="col-6 col-md-4 col-lg-3 mx-auto">
-                        <img src="img/oneservice-app-prototype-10.jpg">
+                        <img class="img-fluid" src="img/oneservice-app-prototype-10.jpg">
                     </div>
                     <div class="col-6 col-md-4 col-lg-3 mx-auto">
-                        <img src="img/oneservice-app-prototype-11.jpg">
+                        <img class="img-fluid" src="img/oneservice-app-prototype-11.jpg">
                     </div>
                 </div>
 
@@ -245,13 +245,13 @@
 
                 <div class="row image-block wow fadeIn">
                     <div class="col-4 col-lg-3 mx-auto">
-                        <img src="img/oneservice-app-prototype-12.jpg">
+                        <img class="img-fluid" src="img/oneservice-app-prototype-12.jpg">
                     </div>
                     <div class="col-4 col-lg-3 mx-auto">
-                        <img src="img/oneservice-app-prototype-13.jpg">
+                        <img class="img-fluid" src="img/oneservice-app-prototype-13.jpg">
                     </div>
                     <div class="col-4 col-lg-3 mx-auto">
-                        <img src="img/oneservice-app-prototype-14.jpg">
+                        <img class="img-fluid" src="img/oneservice-app-prototype-14.jpg">
                     </div>
                 </div>
 
@@ -263,13 +263,13 @@
 
                 <div class="row image-block wow fadeIn">
                     <div class="col-4 col-lg-3 mx-auto">
-                        <img src="img/oneservice-app-prototype-15.jpg">
+                        <img class="img-fluid" src="img/oneservice-app-prototype-15.jpg">
                     </div>
                     <div class="col-4 col-lg-3 mx-auto">
-                        <img src="img/oneservice-app-prototype-16.jpg">
+                        <img class="img-fluid" src="img/oneservice-app-prototype-16.jpg">
                     </div>
                     <div class="col-4 col-lg-3 mx-auto">
-                        <img src="img/oneservice-app-prototype-17.jpg">
+                        <img class="img-fluid" src="img/oneservice-app-prototype-17.jpg">
                     </div>
                 </div>
 
@@ -289,7 +289,7 @@
                                 <li>Introducing a feed of submitted cases in the user's vicinity to provide an integrated experience where they can be more aware of issues that are happening around them.</li>
                             </ol>
                         </p>
-                        <p>Click <a href="https://invis.io/HZ96VO05K" target="_blank"> to try our interactive prototype!</p>
+                        <p>Click <a href="https://invis.io/HZ96VO05K" target="_blank">here</a> to try our interactive prototype!</p>
                     </div>
                 </div>
             </section>
