--- a/projectshowcase.html
+++ b/projectshowcase.html
@@ -20,7 +20,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="navbar-brand">
-                        <a href="index.html"><img src="img/logo.png"><h1>Geng Hao T.</h1></a>
+                        <a href="index.html"><img class="img-fluid" src="img/logo.png"><h1>Geng Hao T.</h1></a>
                     </div>
 
                     <div class="collapse navbar-collapse" id="navbarNav">
@@ -58,7 +58,7 @@
 
                <div class="row">
                    <div class="col-12 col-sm-10 col-md-6 col-lg-5 mx-auto wow fadeIn">
-                      <img src="img/equity-consulting-group.jpg">
+                      <img class="img-fluid" src="img/equity-consulting-group.jpg">
                   </div>
                   <div class="col-12 col-sm-10 col-md-5 mx-auto align-self-center text-block">
                     <p><h2>Equity Consulting Group</h2>
@@ -69,10 +69,10 @@
 
             <div class="row greybg">
             	<div class="col-12 col-sm-10 col-md-8 col-lg-6 mx-auto wow fadeIn">
-            		<img src="img/new-york-travel-guide-1.jpg">
+            		<img class="img-fluid" src="img/new-york-travel-guide-1.jpg">
             	</div>
                 <div class="col-12 col-sm-10 col-md-8 col-lg-6 mx-auto wow fadeIn">
-                    <img src="img/new-york-travel-guide-2.jpg">
+                    <img class="img-fluid" src="img/new-york-travel-guide-2.jpg">
                 </div>
                 <div class="col-12 col-sm-10 col-md-8 mx-auto text-left text-block">
                   <p><h2>New York Travel Guide</h2>
@@ -82,7 +82,7 @@
 
           <div class="row">
            <div class="col-12 col-md-10 col-lg-6 mx-auto align-self-center wow fadeIn">
-              <img src="img/the-ridge-magazine.jpg">
+              <img class="img-fluid" src="img/the-ridge-magazine.jpg">
           </div>
           <div class="col-12 col-sm-10 col-md-8 col-lg-6 mx-auto align-self-center text-block">
             <p><h2>The Ridge Magazine</h2>
