--- a/srina.html
+++ b/srina.html
@@ -19,7 +19,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="navbar-brand">
-                        <a href="index.html"><img src="img/logo.png"><h1>Geng Hao T.</h1></a>
+                        <a href="index.html"><img class="img-fluid" src="img/logo.png"><h1>Geng Hao T.</h1></a>
                     </div>
 
                     <div class="collapse navbar-collapse" id="navbarNav">
@@ -57,7 +57,7 @@
 
              <div class="row image-block wow fadeIn">
                 <div class="col-12 col-md-10 col-lg-8 mx-auto">
-                    <img src="img/srina.jpg">
+                    <img class="img-fluid" src="img/srina.jpg">
                 </div>
             </div>
 
@@ -68,7 +68,7 @@
                 </div>
             </div>
 
-            <div class="row greybg wow fadeInUp">
+            <div class="row greybg wow fadeInUp project-info">
                     <div class="col-12 col-sm-4 text-center">
                         <h3>Period &amp; Timeframe</h3>
                         June 2016 &mdash; August 2016<br>7 weeks
@@ -91,7 +91,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 mx-auto">
-                    <img src="img/srina-brand-identity-concepts.jpg">
+                    <img class="img-fluid" src="img/srina-brand-identity-concepts.jpg">
                 </div>
                 <div class="col-12 mx-auto caption">Preliminary brand identity concepts</div>
             </div>
@@ -104,10 +104,10 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-sm-6 mx-auto">
-                    <img src="img/srina-landing-page-1.jpg">
+                    <img class="img-fluid" src="img/srina-landing-page-1.jpg">
                 </div>
                 <div class="col-12 col-sm-6 mx-auto">
-                    <img src="img/srina-landing-page-2.jpg">
+                    <img class="img-fluid" src="img/srina-landing-page-2.jpg">
                 </div>
             </div>
 
