--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
             <div class="container-fluid work-summary">
                 <div class="row">
                     <div class="col-12 col-sm-10 col-md-8 col-lg-6 mx-auto wow fadeIn">
-                       <img src="img/profile-photo.png">
+                       <img class="img-fluid" src="img/profile-photo.jpg">
                    </div>
                </div>
 
