--- a/about.html
+++ b/about.html
@@ -59,8 +59,8 @@
                <div class="row">
                 <div class="col-12 col-sm-10 col-md-8 col-lg-6 mx-auto text-block">
                   <p>I'm Geng Hao, a designer and student at the National University of Singapore. I enjoy crafting thoughtful and elegant digital experiences, and designing compelling interfaces. I've had the privilege of working with various types of companies across a range of industries, and I'm currently looking out for opportunities in user research and interaction design.</p>
-                  <p>I was exposed to graphic &amp; web design in my early teens, when I taught myself to build websites and applications as a form of creative self-expression. I'm also interested in photography, writing, literary fiction and travelling to new cities to explore cultures other than my own. I'm based in Beijing until the end of 2017, where I'm a design intern at VIPKID and exchange student at Peking University.</p>
-                  <p>Feel free to connect with me on <a href="http://www.linkedin.com/in/geng-hao-teo-065ab0b9/" target="_blank">LinkedIn</a>, or reach out at <strong>teogenghao@gmail.com</strong>.</p>
+                  <p>I was exposed to digital design &amp; code in my early teens, when I taught myself to build websites and applications as a form of creative self-expression. I'm also interested in photography, writing, literary fiction and travelling to new cities to explore cultures other than my own. I'm based in Beijing until the end of 2017, where I'm a design intern at VIPKID and exchange student at Peking University.</p>
+                  <p>Feel free to download a copy of my <a href="resume.pdf" target="_blank">resume</a>, connect with me on <a href="http://www.linkedin.com/in/geng-hao-teo-065ab0b9/" target="_blank">LinkedIn</a>, or reach out at <strong>teogenghao@gmail.com</strong>.</p>
                 </div>
               </div>
         </section>
