Home page changes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,300i,400,400i,500,500i,600,600i|Yantramanav:300,400,500" rel="stylesheet">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109095037-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-109095037-1');
+  </script>
+
 </head>
 <body>
     <div id="my-page">
@@ -40,103 +50,103 @@
             <div class="container-fluid intro" data-top="opacity: 1;" data-top-bottom="opacity: 0;">
                 <div class="row">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                     <div class="description">
-                         <p><h1>Hi! I'm Geng Hao.</h1></p>
-                         <p>I'm an aspiring product designer from Singapore.</p>
-                         <p><a class="worknav" href="#work">View my work &#9662;</a></p>
-                     </div>
-                 </div>
-             </div>
-         </div>
-     </section>
-     
-         <section id="work">
-            <div class="container-fluid work">
-                <div class="row works">
-                    <div class="col-12 col-md-6 mx-auto item">
-                        <a href="accenture.html">
-                            <div class="preview">
-                                <img src="img/accenture-hero.jpg" class="img-fluid">
-                                <div class="labels">
-                                    <div class="label">UX Design</div>
-                                    <div class="label">UI Design</div>
-                                </div>
-                                <div class="caption">Accenture Challenge</div>
+                       <div class="description">
+                           <p><h1>Hi! I'm Geng Hao.</h1></p>
+                           <p>I'm an aspiring product designer from Singapore.</p>
+                           <p><a class="worknav" href="#work">View my work &#9662;</a></p>
+                       </div>
+                   </div>
+               </div>
+           </div>
+       </section>
+       
+       <section id="work">
+        <div class="container-fluid work">
+            <div class="row works">
+                <div class="col-12 col-md-6 mx-auto item">
+                    <a href="accenture.html">
+                        <div class="preview">
+                            <img src="img/accenture-hero.jpg" class="img-fluid">
+                            <div class="labels">
+                                <div class="label">UX Design</div>
+                                <div class="label">UI Design</div>
                             </div>
-                        </a>
-                    </div>
-                    <div class="col-12 col-md-6 mx-auto item">
-                        <a href="investingnote.html">
-                            <div class="preview">
-                                <img src="img/investingnote.jpg" class="img-fluid">
-                                <div class="labels">
-                                    <div class="label">UI Design</div>
-                                    <div class="label">UX Design</div>
-                                    <div class="label">Visual Design</div>
-                                </div>
-                                <div class="caption">InvestingNote</div>
-                            </div>
-                        </a>
-                    </div>
+                            <div class="caption">Accenture Challenge</div>
+                        </div>
+                    </a>
                 </div>
-
-                <div class="row works">
-                    <div class="col-12 col-md-6 mx-auto item">
-                        <a href="oneservice.html">
-                            <div class="preview">
-                                <img src="img/oneservice.jpg" class="img-fluid">
-                                <div class="labels">
-                                    <div class="label">UX Design</div>
-                                    <div class="label">UI Design</div>
-                                </div>
-                                <div class="caption">OneService</div>
+                <div class="col-12 col-md-6 mx-auto item">
+                    <a href="investingnote.html">
+                        <div class="preview">
+                            <img src="img/investingnote.jpg" class="img-fluid">
+                            <div class="labels">
+                                <div class="label">UI Design</div>
+                                <div class="label">UX Design</div>
+                                <div class="label">Visual Design</div>
                             </div>
-                        </a>
-                    </div>
-                    <div class="col-12 col-md-6 mx-auto item">
-                        <a href="srina.html">
-                            <div class="preview">
-                                <img src="img/srina.jpg" class="img-fluid">
-                                <div class="labels">
-                                    <div class="label">Branding &amp; Identity</div>
-                                    <div class="label">Visual Design</div>
-                                </div>
-                                <div class="caption">Srina</div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="row works">
-                    <div class="col-12 col-md-6 item">
-                        <a href="projectshowcase.html">
-                            <div class="preview">
-                                <img src="img/project-showcase.jpg" class="img-fluid">
-                                <div class="labels">
-                                </div>
-                                <div class="caption">Project Showcase</div>
-                            </div>
-                        </a>
-                    </div>
+                            <div class="caption">InvestingNote</div>
+                        </div>
+                    </a>
                 </div>
             </div>
-        </section>
 
-        <section id="footer">
-            <div class="container-fluid footer">
-                <div class="row">
-                    <div class="col-12 text-center mx-auto">
-                        <a href="http://www.linkedin.com/in/geng-hao-teo-065ab0b9/" target="_blank"><i class="fa fa-linkedin left"></i></a>
-                        <a href="http://instagram.com/genghaot" target="_blank"><i class="fa fa-instagram left"></i></a>
-                    </div>
+            <div class="row works">
+                <div class="col-12 col-md-6 mx-auto item">
+                    <a href="oneservice.html">
+                        <div class="preview">
+                            <img src="img/oneservice.jpg" class="img-fluid">
+                            <div class="labels">
+                                <div class="label">UX Design</div>
+                                <div class="label">UI Design</div>
+                            </div>
+                            <div class="caption">OneService</div>
+                        </div>
+                    </a>
                 </div>
-                <div class="row copyright">
-                    <div class="col-12 text-center mx-auto">
-                        Copyright &copy; 2017 Teo Geng Hao
-                    </div>
+                <div class="col-12 col-md-6 mx-auto item">
+                    <a href="srina.html">
+                        <div class="preview">
+                            <img src="img/srina.jpg" class="img-fluid">
+                            <div class="labels">
+                                <div class="label">Branding &amp; Identity</div>
+                                <div class="label">Visual Design</div>
+                            </div>
+                            <div class="caption">Srina</div>
+                        </div>
+                    </a>
                 </div>
             </div>
-        </section>
+
+            <div class="row works">
+                <div class="col-12 col-md-6 item">
+                    <a href="projectshowcase.html">
+                        <div class="preview">
+                            <img src="img/project-showcase.jpg" class="img-fluid">
+                            <div class="labels">
+                            </div>
+                            <div class="caption">Project Showcase</div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="footer">
+        <div class="container-fluid footer">
+            <div class="row">
+                <div class="col-12 text-center mx-auto">
+                    <a href="http://www.linkedin.com/in/geng-hao-teo-065ab0b9/" target="_blank"><i class="fa fa-linkedin left"></i></a>
+                    <a href="http://instagram.com/genghaot" target="_blank"><i class="fa fa-instagram left"></i></a>
+                </div>
+            </div>
+            <div class="row copyright">
+                <div class="col-12 text-center mx-auto">
+                    Copyright &copy; 2017 Teo Geng Hao
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
 
 <!-- JavaScript placed at the end of the document so the pages load faster -->
